Upload compiled binaries as artifacts.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,3 +85,16 @@ jobs:
         else
           cargo test --verbose --target ${{ matrix.target }}
         fi
+
+    - name: Collect binaries
+      run: |
+        mkdir -p artifacts/${{ matrix.target }}
+        install -Dm755 rtimage/target/${{ matrix.target }}/debug/rtimage artifacts/${{ matrix.target }}/rtimage
+        install -Dm755 rtinfo/target/${{ matrix.target }}/debug/rtinfo artifacts/${{ matrix.target }}/rtinfo
+
+    - name: Upload rttools binaries
+      uses: actions/upload-artifact@v4
+      with:
+        name: rttools-${{ matrix.target }}
+        path: artifacts/${{ matrix.target }}
+        if-no-files-found: error
