--- a/rtimage/Cargo.toml
+++ b/rtimage/Cargo.toml
@@ -10,3 +10,6 @@ chrono = "0.4"
 clap = { version = "4.5.53", features = ["derive"] }
 crossbeam-channel = "0.5.15"
 rtsimh = { path = "../rtsimh" }
+
+[profile.release]
+panic = "abort"
