--- a/rtinfo/Cargo.toml
+++ b/rtinfo/Cargo.toml
@@ -10,3 +10,6 @@ clap = { version = "4", features = ["derive"] }
 chrono = "0.4"
 indexmap = "2"
 rtsimh = { path = "../rtsimh" }
+
+[profile.release]
+panic = "abort"
