--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,8 +91,12 @@ jobs:
 
     - name: Strip release binaries
       run: |
-        STRIP="$(rustc --print sysroot)/lib/rustlib/bin/llvm-strip"
-        chmod +x "$STRIP"
+        HOST_TRIPLE=$(rustc -Vv | awk '/host:/ { print $2 }')
+        STRIP="$(rustc --print sysroot)/lib/rustlib/${HOST_TRIPLE}/bin/llvm-strip"
+        if [ ! -x "$STRIP" ]; then
+          echo "llvm-strip not found at $STRIP" >&2
+          exit 1
+        fi
         "$STRIP" rtimage/target/${{ matrix.target }}/release/rtimage
         "$STRIP" rtinfo/target/${{ matrix.target }}/release/rtinfo
 
